--- a/Index.html
+++ b/Index.html
@@ -35,41 +35,41 @@
 
 	<div class="products">
         <div class="text-bg-info text-center">
-            <h2>APPLE</h2>
-            <p>Price: $10</p>
-        <img src="image1.png"><height="50px></height>"<width="50px"></width>
+            <h2>SAREE</h2>
+            <p>Price: $1200</p>
+        <img src="saree.jpeg"><height="50px></height>"<width="50px"></width>
         <p>100% wax free,good source of vitamin c,dietary fiber</p>
             <button class="add-to-cart" onclick="addToCart('APPLE', 10)">Add to Cart</button>
         </div>
 
         <div class="text-bg-warning text-center">
-            <h2>BANANA</h2>
-            <p>Price: $20</p>
-            <img src ="image2.png"><height="50px></height>"<width="50px"></width>
+            <h2>HANDBAG</h2>
+            <p>Price: $2000</p>
+            <img src ="handbag.jpeg"><height="50px></height>"<width="50px"></width>
             <p>naturally flavoured,aromatic and sweeter compared to regular bananas</p>
             <button class="add-to-cart" onclick="addToCart('BANANA', 20)">Add to Cart</button>
         </div>
     	</div>
         <div class="text-bg-danger text-center">
-            <h2>GAUVA</h2>
-            <p>Price: $30</p>
-            <img src="image3.png"><height="50px></height>"<width="50px"></width>
+            <h2>SHOES</h2>
+            <p>Price: $3000</p>
+            <img src="shoes.jpeg"><height="50px></height>"<width="50px"></width>
             <p>fresh,hygenic and natural . Rich in vitamin A,C,folate and fiber</p>
             <button class="add-to-cart" onclick="addToCart('GAUVA', 30)">Add to Cart</button>
         </div>
     	</div>
         <div class="text-bg-secondary text-center">
-            <h2>MANGO</h2>
-            <p>Price: $40</p>
-            <img src="image4.png"><height="50px></height>"<width="50px"></width>
+            <h2>LEHENGA</h2>
+            <p>Price: $4000</p>
+            <img src="lehenga.jpeg"><height="50px></height>"<width="50px"></width>
             <p>this provides 50% of your daily vitamin C, 8% of your daily vitamin A and 8% of your daily vitaminB6</p>
             <button class="add-to-cart" onclick="addToCart('MANGO', 40)">Add to Cart</button>
         </div>
     	</div>
         <div class="text-bg-primary text-center">
-            <h2>STRAWBERRY</h2>
-            <p>Price: $50</p>
-            <img src="image5.png"><height="50px></height>"<width="50px"></width>
+            <h2>WATCH</h2>
+            <p>Price: $5000</p>
+            <img src="watch.jpeg"><height="50px></height>"<width="50px"></width>
             <p>strawberries are smart fruit for choice for diabetics and one of the healthiest fruit</p>
             <button class="add-to-cart" onclick="addToCart('STRAWBERRY', 50)">Add to Cart</button>
         </div>
