--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <p>Price: $1500</p>
         <img src="watch.jpeg" width="200" height="200"></img>
         <p>Classic you can wear,like to watch the best.stylish and gold shined watch.</p>
-            <button class="add-to-cart" onclick="addToCart('WATCH', 150)">Add to Cart</button>
+            <button class="add-to-cart" onclick="addToCart('WATCH', 1500)">Add to Cart</button>
         </div>
 
         <div class="text-bg-warning text-center">
@@ -47,7 +47,7 @@
             <p>Price: $1000</p>
             <img src ="handbag.jpeg" width="200" height="200"></img>
             <p>100% elegant and stylish earpods.</p>
-            <button class="add-to-cart" onclick="addToCart('EARPODS', 100)">Add to Cart</button>
+            <button class="add-to-cart" onclick="addToCart('HANDBAG', 1000)">Add to Cart</button>
         </div>
     	</div>
         <div class="text-bg-danger text-center">
@@ -55,7 +55,7 @@
             <p>Price: $1000</p>
             <img src="saree.jpeg"  width="200" height="200"></img>
             <p>presenting to you,this fashion-forward shirt.</p>
-            <button class="add-to-cart" onclick="addToCart('SHIRT', 100)">Add to Cart</button>
+            <button class="add-to-cart" onclick="addToCart('SAREE', 1000)">Add to Cart</button>
         </div>
     	</div>
         <div class="text-bg-secondary text-center">
@@ -63,7 +63,7 @@
             <p>Price: $1500</p>
             <img src="lehenga.jpeg"  width="200" height="200"></img>
             <p>most attractive and elegant handbag.</p>
-            <button class="add-to-cart" onclick="addToCart('HANDBAG', 150)">Add to Cart</button>
+            <button class="add-to-cart" onclick="addToCart('LEHENGA', 1500)">Add to Cart</button>
         </div>
     	</div>
         <div class="text-bg-primary text-center">
@@ -71,7 +71,7 @@
             <p>Price: $2000</p>
             <img src="shoes.jpeg"  width="200" height="200"></img>
             <p>The world is at your feet,so make sure you're wearing great shoes.</p>
-            <button class="add-to-cart" onclick="addToCart('SHOES', 200)">Add to Cart</button>
+            <button class="add-to-cart" onclick="addToCart('SHOES', 2000)">Add to Cart</button>
         </div>
     	</div>
         <div class="cart">
