--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h2>WATCH</h2>
             <p>Price: $1500</p>
         <img src="watch.jpeg" width="200" height="200"></img>
-        <p>Classic you can wear,like to watch the best.stylish and gold shined watch.</p>
+        <p>Classic you can wear,like to watch the best.stylish and black color watch.</p>
             <button class="add-to-cart" onclick="addToCart('WATCH', 1500)">Add to Cart</button>
         </div>
 
@@ -46,7 +46,7 @@
             <h2>HANDBAG</h2>
             <p>Price: $1000</p>
             <img src ="handbag.jpeg" width="200" height="200"></img>
-            <p>100% elegant and stylish earpods.</p>
+            <p>100% elegant and stylish handbag.</p>
             <button class="add-to-cart" onclick="addToCart('HANDBAG', 1000)">Add to Cart</button>
         </div>
     	</div>
@@ -54,7 +54,7 @@
             <h2>SAREE</h2>
             <p>Price: $1000</p>
             <img src="saree.jpeg"  width="200" height="200"></img>
-            <p>presenting to you,this fashion-forward shirt.</p>
+            <p>presenting to you,this fashion-forward saree.</p>
             <button class="add-to-cart" onclick="addToCart('SAREE', 1000)">Add to Cart</button>
         </div>
     	</div>
@@ -62,7 +62,7 @@
             <h2>LEHENGA</h2>
             <p>Price: $1500</p>
             <img src="lehenga.jpeg"  width="200" height="200"></img>
-            <p>most attractive and elegant handbag.</p>
+            <p>most attractive and elegant lehenga .</p>
             <button class="add-to-cart" onclick="addToCart('LEHENGA', 1500)">Add to Cart</button>
         </div>
     	</div>
